# Pong

./: CMakeLists.txt
resources/shaders/: fSprite.txt  fragment.txt  vSprite.txt  vertex.txt
src/: main.cpp
src/objects/: Ball.cpp  Ball.h  GameObject.cpp  GameObject.h
src/render/: ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h
src/resources/: ResourceManager.cpp  ResourceManager.h
